--- a/ValheimMods/CropUtils/CropUtils/CropUtils.csproj
+++ b/ValheimMods/CropUtils/CropUtils/CropUtils.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\IgnoreAccessModifiers.cs" />
     <Compile Include="CropUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
